(3)  New shorter command window output if debug==0 with a final removing of the
     gray output of the subroutines. 
     (changes in "vbm_io_cmd","vbm_vol_partvol","cg_vbm_write"). 
------------------------------------------------------------------------
r678 | dahnke | 2015-03-03 11:28:57

M       CHANGES.txt
M       cg_vbm_write.m
 M      vbm_tst_BWPsliceartifact.m

(1)  Corrected Yy output error for low resolution images.
(2)  Corrected error in final Affine segmentation for low resolution images.
------------------------------------------------------------------------
r679 | dahnke | 2015-03-04 09:05:15

M       CHANGES.txt
M       cg_vbm_defaults.m
M       cg_vbm_run_job.m
M       cg_vbm_write.m
M       html/vbm12.html

(1) Changed default values back to r674 in cg_vbm_defaults.m.
(2) Use correct estimate of mat file after final affine transformation.
(3) Added check for field before isfield is called in vbm_tst_qa.m.
(4) Removed saving of vbm12_*.mat file because it's not necessary
    anymore.
    
------------------------------------------------------------------------
r680 | gaser | 2015-03-04 16:37:48

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm_stat_marks.m
M       vbm_tst_qa.m

(1)  Corrected errors in "cg_vbm_write" due to MRF filtering of SPM segmentation
     that requires skull-stripping / cleanup.
(2)  Corrected error in "vbm_tst_qa" for "cg_vbm_write" call. 
(3)  Updated inhomogeneity measure ICR/CIR in "vbm_tst_qa" and rating. 
     Test showed low correlation between ICR/CIR and preprocessing quality. 
     Used a more relaxed scaling (BWP 100 inhomogeneity ~ mark 3.5, worst case
     real data - HR075 and 7Tesla ~ mark 5 to 6).
(4)  Corrected filter strength of the ORNLM filter. Used CNR previous as input,
     but theornlmMEX function requires a SNR value (~CNR*3).


------------------------------------------------------------------------
r681 | dahnke | 2015-03-12 14:02:25