@@ -6544,3 +6544,11 @@ M       vbm_tst_qa.m
 
 ------------------------------------------------------------------------
 r681 | dahnke | 2015-03-12 14:02:25
+
+M       CHANGES.txt
+M       cg_vbm_write.m
+M       vbm_tst_qa.m
+
+(1)  Corrected data type error in "vbm_tst_qa".
+------------------------------------------------------------------------
+r682 | dahnke | 2015-03-13 10:38:14
